# Gremory

./: .gitignore  README.md  client.py  config.yaml.example  pyproject-linux.toml  pyproject.toml  server.py  validation.py
src/GremoryServer/modules/: llama_cpp_wrapper.py  sampling.py
src/gremory/: __init__.py  types.py
src/gremory/modules/: chat_formatter.py  llama_cpp_module.py  llama_cpp_wrapper.py  samplers.py  sampling.py
