[project]
name = "gremory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.4.0+cu121",
    "litserve>=0.2.1",
    "llama-cpp-python>=0.2.90",
    "transformers>=4.44.2",
    "numpy<2",
    "uvloop>=0.20.0; platform_system != 'Windows'",
    "winloop>=0.1.6; platform_system == 'Windows'",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.4.0%2Bcu121-cp311-cp311-win_amd64.whl"}
llama-cpp-python = {url = "https://github.com/abetlen/llama-cpp-python/releases/download/v0.2.90-cu121/llama_cpp_python-0.2.90-cp311-cp311-win_amd64.whl"}